--- a/AI_Based_Image_Transformation(Milestone_1).ipynb
+++ b/AI_Based_Image_Transformation(Milestone_1).ipynb
@@ -11,6 +11,49 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import nbformat, glob\n",
+        "\n",
+        "# Scan and fix all notebooks in /content\n",
+        "for path in glob.glob(\"/content/*.ipynb\"):\n",
+        "    nb = nbformat.read(path, as_version=nbformat.NO_CONVERT)\n",
+        "    if \"widgets\" in nb[\"metadata\"]:\n",
+        "        nb[\"metadata\"][\"widgets\"].setdefault(\"state\", {})  # add empty 'state'\n",
+        "    nbformat.write(nb, path.replace(\".ipynb\", \"_fixed.ipynb\"))\n",
+        "    print(\"✅ Fixed:\", path)\n"
+      ],
+      "metadata": {
+        "id": "wO8NdMyNe8_T"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# You can use shell commands in Colab cells by prefixing them with '!'\n",
+        "!echo \"The fixed notebook is saved as your_notebook_fixed.ipynb\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "btwCfn9qfJwg",
+        "outputId": "6674c58f-4bf4-4ee6-c1eb-7b735a41cf31"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The fixed notebook is saved as your_notebook_fixed.ipynb\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "9IUu74MWX-a-"
@@ -28,13 +71,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3x3mTB9MXvTk",
-        "outputId": "5eb2d493-6cc9-4149-f713-75c625a583f4"
+        "outputId": "a77d59df-1af1-471b-e31a-7c9cb63449ca"
       },
       "outputs": [
         {
@@ -52,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "id": "jcDTII6aaSLq"
       },
@@ -63,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {
         "id": "iAcvlMVKaYZT"
       },
@@ -78,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {
         "id": "8pqHHb1-aotG"
       },
@@ -89,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {
         "id": "EUo_D3nxa4of"
       },
@@ -102,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {
         "id": "yzmGWKXya-J9"
       },
@@ -113,14 +156,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 11,
       "metadata": {
         "id": "FnK6wkAZbFFo",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 317
         },
-        "outputId": "e37611e9-71d3-4bf4-d68a-648435011e03"
+        "outputId": "f96ce71e-9d30-4f9c-c118-15974d753fb3"
       },
       "outputs": [
         {
@@ -143,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "G-0a4wHobUMT",
         "colab": {
@@ -187,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 12,
       "metadata": {
         "id": "BuemozljrWyU"
       },
@@ -201,14 +244,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "6zXpUy3mrZOC",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 73
+          "height": 55
         },
-        "outputId": "4f063ef4-6eb5-4d4e-93a1-b0645168e8e3"
+        "outputId": "fb62a2de-d7cc-46ad-abc6-b0937a609f7c"
       },
       "outputs": [
         {
@@ -219,9 +262,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-087f27e9-3657-466e-8a68-db1f0b8d4c84\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-f6d7a4a6-5213-427f-b99e-a9611b43d504\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-087f27e9-3657-466e-8a68-db1f0b8d4c84\">\n",
+              "     <output id=\"result-f6d7a4a6-5213-427f-b99e-a9611b43d504\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -404,13 +447,6 @@
             ]
           },
           "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Saving lake image.jpg to lake image.jpg\n"
-          ]
         }
       ],
       "source": [
@@ -420,7 +456,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "uSUEpV1LrqLe"
       },
@@ -431,7 +467,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "M_EMzT4CrvNW"
       },
@@ -442,7 +478,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "3n29F5_2r2kI"
       },
@@ -453,7 +489,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "FcojQtUYr7OT"
       },
@@ -464,7 +500,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "Gv0OzTdHsAOI"
       },
@@ -476,7 +512,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "oGHdIIRdsGHu"
       },
@@ -488,7 +524,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "ArkDEmipsPZm"
       },
@@ -500,7 +536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "bIm__OLRsQ5V",
         "colab": {
@@ -539,7 +575,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "dOZ0Gb2F9Xp6",
         "colab": {
@@ -651,7 +687,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "QTCCBG0kA5mC"
       },
@@ -667,7 +703,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "Uki0C2XyBYHY",
         "colab": {
@@ -886,7 +922,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "SLrZ8MBpBkK_"
       },
@@ -898,7 +934,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "mYpKz7TVBs5E"
       },
@@ -909,7 +945,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "tUYksQRBBt68"
       },
@@ -921,7 +957,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "Ha82SQ91HEfD",
         "colab": {
@@ -960,7 +996,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "fnOn2s__JffR"
       },
@@ -975,7 +1011,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "VI3v8FppJqSJ",
         "colab": {
@@ -1003,7 +1039,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "zt6eVeFjJvZd",
         "colab": {
@@ -1223,7 +1259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "G7xUoD3PJ2GY",
         "colab": {
@@ -1695,7 +1731,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "hzQXmLuSLOH7",
         "colab": {
@@ -1802,7 +1838,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "9--p_7lWLdlQ",
         "colab": {
@@ -1833,7 +1869,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "kT1gkwkiLnsH"
       },
@@ -1854,7 +1890,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "0c6bzhhcPH5B"
       },
@@ -1873,7 +1909,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2530,7 +2566,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "iag1rrWbRI0Q"
       },
@@ -2557,7 +2593,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2597,7 +2633,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "vkwVtKbEReJI"
       },
@@ -2612,7 +2648,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "KSuEg8X_Rlbf"
       },
@@ -2624,7 +2660,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2744,7 +2780,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "id": "-9FqiplwSZBU"
       },
@@ -2755,7 +2791,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "id": "NOozGRPGShQd"
       },
@@ -2771,7 +2807,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMX53q0fLSs0MjKTIefP9j1",
+      "authorship_tag": "ABX9TyO43R76agf9W/ACZ5rk4mtn",
       "include_colab_link": true
     },
     "kernelspec": {
