--- a/AI_Based_Image_Transformation(Milestone_1).ipynb
+++ b/AI_Based_Image_Transformation(Milestone_1).ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/pujakr2/puja-kumari/blob/main/AI_Based_Image_Transformation(Milestone_1).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "9IUu74MWX-a-"
       },
       "source": [
@@ -1285,7 +1295,8 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMm3qeA0LCsqbY/YalfcJXM"
+      "authorship_tag": "ABX9TyMm3qeA0LCsqbY/YalfcJXM",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
